--- a/media/html/event/6.html
+++ b/media/html/event/6.html
@@ -99,6 +99,6 @@
 		&emsp;&emsp;<strong>雏量级：路易斯-斯莫卡（Louis Smolka） 降服 胜 苏木达尔基（Sumudaerji）</strong>
 	</p>
 	<p style="font-size:14px;color:#333333;">
-		&emsp;&emsp;（UFC中国 大拿）
+		&emsp;&emsp;转载自：UFC中国 大拿（http://ufc.cn/news/2018-11-24/news-ihmutuec3315614.shtml）
 	</p>
 </div>
